--- a/app/views/resumes/show.html.erb
+++ b/app/views/resumes/show.html.erb
@@ -3,7 +3,7 @@
     <button class="res-button print">Print</button>
 </div>
 
-<div class=".print_res">
+<div class="print_res_view">
     <div class='nd'><%= "#{@user.first_name} #{@user.last_name}" %></div>
     <div class='cd'><%= "#{@user.phone} - #{@user.email} - https://peter.koruga.com?appid=#{@appCode}" %></div>
     <div class="me-intro-d"><%= @resume.title %></div>
