--- a/app/views/home/print.html.erb
+++ b/app/views/home/print.html.erb
@@ -1,117 +1,75 @@
 <div class=".print_res">
-    <%= @user.first_name %>
-    <div class='n'>Peter Koruga</div>
-    <div class='c'>(906) 662-4859 - peterk3@koruga.com</div>
-    <div class="me-intro">Software developer uniquely qualified in business</div>
-    <div class="h">Experience</div>
-        <div class='cat'>
-            <div class="item">
-                <div class="subhead">Indianhead Valley Condos Fullstack</div>
-                <div class="i">Online availability and booking on the front end and all of the RMS functionality in the back end. The app uses Parseplatform API and Server for data storage and user admin (currently refactoring to use AWS). It is capable of managing all aspects of a family owned lodging facility. Which includes creating, reading, updating and deleting guests, reservations, payments and other financial/bookkeeping/sales data. Payment processing via the Stripe API. Visual reservation calendar for 13 units.
+    <div class='nd'><%= "#{@user.first_name} #{@user.last_name}" %></div>
+    <div class='cd'><%= "#{@user.phone} - #{@user.email} - https://peter.koruga.com?appid=#{@appCode}" %></div>
+    <div class="me-intro-d"><%= @resume.title %></div>
+    <div class="hd">Experience</div>
+    <div class='cat-d'>
+        <div class="i-d"><%= @resume.expir_desc%></div>
+        <div class="resumer-container-d">
+            <% @projects.each do |p|%>
+                <div class="item-d">
+                    <div class="subhead-d"><%= p.title %></div>
+                        <div class="i-d"><%= p.description %>
+                        </div>
                 </div>
-            </div>
-            <div class="item">
-                <div class="subhead">Indianhead Valley Condos iOS Admin App</div>
-                <div class="i">All of the functionality of the back end of the website including Stripe payments.</div>
-            </div>
-            <div class="item">
-            <div class="subhead">iOS Apps</div>
-                <div class="list">
-                    <ul>
-                        <li class="rli">Crime Scene Evidence Marker (Tableview manipulation and Location Service)</li>
-                        <li class="rli">Simple Schedule Viewer (EventKit)</li>
-                        <li class="rli">Crime Scene Identifier Card </li>
-                        <li class="rli">Blood Spatter Angle Calculator</li>
-                        <li class="rli">Blood Spatter Angle Calculator Pro (CloudKit)</li>
-                    </ul>
-                </div>
-            </div>
-            <div class="item">
-                <div class="subhead">IoT Projects</div>
-                <div class="i">IoT projects have become my fun little hobby. Yet they still lend to my knowledge of developing and technology.  Most of the projects have either a companion iOS app or a web app to control them. The newest challenge was designing and etching a homebuilt custom PCB.</div>
-                <div class="list">
-                    <ul>
-                        <li class="rli">Indianhead Valley Condos temperature sensors and lighting control and app</li>
-                        <li class="rli">Electric line voltage smart thermostat and app</li>
-                        <li class="rli">Turtle tank lighting and heat controller</li>
-                        <li class="rli">Wifi garage door opener and app (Custom PCB)</li>
-                    </ul>
-                </div>
-            </div>
+            <% end %>
         </div>
-    <div class="h">Languages - Frameworks - Systems</div>
-        <div class='cat'>
-            <div class="item">
-                <div class="i">Builing all of these project myself has pushed me to learn a number of different languages to complete the projects.</div>
-                <div class="list">
-                    <table class="other">
+    </div>
+    <div class="hd">Languages - Frameworks - Systems</div>
+    <div class='cat-d'>
+        <div class="i-d"><%= @resume.tech_desc%></div>
+        <div class="resumer-container-d">
+            <div class="item-d">
+                <div class="list-d">
+                    <table class="other-d">
                         <tr>
-                            <td>
-                                <ul>
-                                    <li class="rli">HTML</li>
-                                    <li class="rli">CSS</li>
-                                    <li class="rli">Javascript</li>
-                                    <li class="rli">JQuery</li>
-                                    <li class="rli">Swift</li>
-                                    <li class="rli">Objective-C</li>
-                                    <li class="rli">PHP</li>
-                                <ul>
-                            </td>
-                            <td>
-                                <ul>
-                                    <li class="rli">Ruby</li>
-                                    <li class="rli">Rails</li>
-                                    <li class="rli">React</li>
-                                    <li class="rli">C++ (Wiring)</li>
-                                    <li class="rli">Python</li>
-                                    <li class="rli">SQL</li>
-                                    <li class="rli">AWS</li>
-                                </ul>
-                            </td>
+                            <% @techGroups.each do |tg| %>
+                                <td>
+                                    <ul>
+                                        <% tg.each do |t| %>
+                                            <li class="rli-d"><%= t.name %></li>
+                                        <% end %>
+                                    <ul>
+                                </td>
+                            <% end %>
                         </tr>
                     </table>
                 </div>
             </div>
         </div>
+    </div>
 
-    <div class="h">Certificates from Lynda.com and LinkedIn</div>
-        <div class='cat'>
-            <div class="item">
-                <div class="list">
-                    <table class="other">
-                        <tr>
-                            <td>
-                                <ul>
-                                    <li class="rli">Learning React.js</li>
-                                    <li class="rli">Learning Server-Side Swift with Vapor</li>
-                                    <li class="rli">Accounting Foundations: Bookkeeping</li>
-                                    <li class="rli">Learning Video Production and Editing</li>
-                                    <li class="rli">Finance Essentials for Small Business</li>
-                                    <li class="rli">Accounting Foundations</li>
-                                    <li class="rli">Bootstrap 3 Essential Training</li>
-                                </ul>
-                            </td>
-                            <td>
-                                <ul>
-                                    <li class="rli">jQuery Essential Training</li>
-                                    <li class="rli">Validating and Processing Forms with Javascript and PHP</li>
-                                    <li class="rli">InDesign CS5: Print Production Guidelines</li>
-                                    <li class="rli">Swift Essential Training</li>
-                                    <li class="rli">Distributing iOS Applications Through the App Store</li>
-                                    <li class="rli">Learning Python</li>
-                                    <li class="rli">SQL Essential Training</li>
-                                </ul>
-                            </td>
-                        </tr>
-                    </table>
+    <div class="hd">Certificates from Lynda.com and LinkedIn</div>
+        <div class='cat-d'>
+            <div class="i-d"><%= @resume.tech_desc%></div>
+            <div class="resumer-container-d">
+                <div class="item-d">
+                    <div class="list-d">
+                        <table class="other-d">
+                            <tr>
+                                <% @certGroups.each do |cg| %>
+                                    <td>
+                                        <ul>
+                                            <% cg.each do |c| %>
+                                                <li class="rli-d"><%= c.title %></li>
+                                            <% end %>
+                                        <ul>
+                                    </td>
+                                <% end %>
+                            </tr>
+                        </table>
+                    </div>
                 </div>
             </div>
         </div>
 
-    <div class="h">Education</div>
-        <div class='cat'>
-            <div class="item">
-                <div class="i">Bachelors of Science in Business from Northern Michigan University 2005</div>
+    <div class="hd">Education</div>
+        <div class='cat-d'>
+            <div class="i-d"><%= @resume.edu_desc%></div>
+            <div class="resumer-container-d">
+                <div class="item-d">
+                    <div class="i-d">Bachelors of Science in Business from Northern Michigan University 2005</div>
+                </div>
             </div>
         </div>
 </div>
