getting resume checkboxes working

--- a/app/views/job_applications/new.html.erb
+++ b/app/views/job_applications/new.html.erb
@@ -11,6 +11,8 @@
 
             <%= content_tag(:div, f.text_field(:position_applied, class: ["form-input", "form-position"], placeholder: "Position applying for"), class: "form-item") %>
 
+            <%= content_tag(:div, f.text_field(:comp_jobid, class: ["form-input", "form-company"], placeholder: "Companies Job ID"), class: "form-item") %>
+
             <%= content_tag(:div, f.text_area(:application_notes, class: ["form-input", "form-app-notes"], placeholder: "Application Notes"), class: "form-item") %>
 
             <div class="form-buttons">
