--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -2,18 +2,17 @@
     <div class="admin-top">
         <div class="admin-head-page-title">Admin Area</div>
         <div class="admin-menu">
-            <% if @user %>
-                <ul>
-                    <li><%= link_to("Certificates" , certificates_path()) %></li>
-                    <li><%= link_to("Projects" , projects_path()) %></li>
-                    <li><%= link_to("Applications" , job_applications_path()) %></li>
-                    <li><%= link_to("Logout #{@user.first_name}" , access_logout_path()) %></li>
-                </ul>
-                
-                <% else %>
-                 <%= link_to('Login', access_login_path()) %>
-                 <% end %>
-            </div>
+            <ul>
+                <li><%= link_to("Certificates" , certificates_path()) %></li>
+                <li><%= link_to("Projects" , projects_path()) %></li>
+            <% unless @user %>
+                <li><%= link_to('Login', access_login_path()) %></li>
+            <% else %>
+                <li><%= link_to("Applications" , job_applications_path()) %></li>
+                <li><%= link_to("Logout #{@user.first_name}" , access_logout_path()) %></li>
+            <% end %>
+            </ul> 
+        </div>
     </div>
     <div class="project-list">
         <div class="admin-menu-title">Projects</div>
