--- a/app/views/layouts/home.html.erb
+++ b/app/views/layouts/home.html.erb
@@ -54,7 +54,11 @@
         <div class="nav-right">
             <ul>
                 <li><%= link_to('Projects', details_path()) %></li>
-                <li><%= link_to('Resume', res_path()) %> <%= link_to(fa_icon("file"), "/resume.pdf", aria: {label:"Peter's Resume as a PDF"}, target: "_blank") %></li>
+                <% if @resume %>
+                  <li><%= link_to('Resume', res_path(appid: @resume.job_application.gen_code)) %> <%= link_to(fa_icon("file"), url_for(@resume.res_pdf), aria: {label:"Peter's Resume as a PDF"}, target: "_blank") %></li>
+                <% else %>
+                  <li><%= link_to('Resume', res_path()) %> <%= link_to(fa_icon("file"), "/resume.pdf", aria: {label:"Peter's Resume as a PDF"}, target: "_blank") %></li>
+                <% end %>
                 <li class="stripe1">4 the Kids</li>
             </ul>
         </div>
