--- a/app/views/home/print.html.erb
+++ b/app/views/home/print.html.erb
@@ -41,7 +41,7 @@
 
     <div class="hd">Certificates from Lynda.com and LinkedIn</div>
         <div class='cat-d'>
-            <div class="i-d"><%= @resume.tech_desc%></div>
+            <div class="i-d"><%= @resume.cert_desc%></div>
             <div class="resumer-container-d">
                 <div class="item-d">
                     <div class="list-d">
