changed option on wicked_pdf lowquality true

--- a/app/views/home/print.html.erb
+++ b/app/views/home/print.html.erb
@@ -9,7 +9,7 @@
             <% @projects.each do |p|%>
                 <div class="item-d">
                     <div class="subhead-d"><%= p.title %></div>
-                        <div class="i-d"><%= p.description %>
+                        <div class="list-d"><%= p.description %>
                         </div>
                 </div>
             <% end %>
