Added dynamic education to resume

--- a/app/views/home/print.html.erb
+++ b/app/views/home/print.html.erb
@@ -69,7 +69,7 @@
             <div class="i-d"><%= @resume.edu_desc%></div>
             <div class="resumer-container-d">
                 <div class="item-d">
-                    <div class="i-d">Bachelors of Science in Business from Northern Michigan University 2005</div>
+                    <div class="i-d"><%= @user.education %></div>
                 </div>
             </div>
         </div>
