updated css for resume

--- a/app/assets/stylesheets/resumes.scss
+++ b/app/assets/stylesheets/resumes.scss
@@ -51,7 +51,7 @@ $orange: #FD5E53;
 }
 
 .other-d {
-    width: 80%;
+    width: 100%;
     ul {
         padding-left: 0px;
     }
@@ -104,7 +104,7 @@ hr {
 }
 
 .subhead-d {
-    font-size: 20px;
+    font-size: 18px;
     padding-bottom: 7px;
 }
 
@@ -119,6 +119,9 @@ hr {
 }
 
 .list-d {
-    padding-left: 12px;
+    padding-left: 10px;
 }
 
+.t-bg {
+    width: 33%;
+}
