--- a/app/views/home/print.html.erb
+++ b/app/views/home/print.html.erb
@@ -24,7 +24,7 @@
                     <table class="other-d">
                         <tr>
                             <% @techGroups.each do |tg| %>
-                                <td>
+                                <td class="t-bg">
                                     <ul>
                                         <% tg.each do |t| %>
                                             <li class="rli-d"><%= t.name %></li>
