Removed (wiring), grammer fixes

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -18,7 +18,7 @@
             Coding Skills
         </div>
         <div class="info">
-            HTML, CSS, Javascript, jQuery, Swift, Objective-C, AWS, PHP, Ruby, Rails, React, C++ (Wiring), Python, SQL
+            HTML, CSS, Javascript, jQuery, Swift, Objective-C, AWS, PHP, Ruby, Rails, React, C++, Python, SQL
         </div>
     </div>
     <div class="quick-item">
@@ -48,7 +48,7 @@
 
             <p>Having been involved in the "business" end of a number of different businesses I have a perspective and a business vision that some developers with less or no business experience will have.  Being able to look at an application and picture how a non-technical end user will use the application is an advantage that I provide.</p>
             
-            <p>Spending all my time coding is my ideal position. However, it would be doing what I am good at a disservice. One thing that I have been doing almost my entire life is.... wait for it... TALKING ;) Some might say just a bit too much (Dad). Being able to sit with potential SaaS clients and working through what there needs are and how a team that I am on could solve there problems then going back to the computer and crunching would be a great fit for my capabilities.</p>
+            <p>Spending all my time coding is my ideal position. However, it would be doing what I am good at a disservice. One thing that I have been doing almost my entire life is.... wait for it... TALKING ;) Some might say just a bit too much (Dad). Being able to sit with potential business or SaaS clients and working through what there needs are and how a team that I am on could solve their problems. Then going back to the computer and crunching would be a great fit for my capabilities and interests.</p>
 
         </div>
     </div>
