--- a/app/views/home/resume.html.erb
+++ b/app/views/home/resume.html.erb
@@ -32,7 +32,7 @@
                         <%= t.name %>
                     <% end %>
                 <% else %>
-                    HTML, CSS, Javascript, JQuery, Swift, Objective-C, PHP, Ruby, Rails, React, C++ (Wiring), Python, SQL, AWS
+                    HTML, CSS, Javascript, JQuery, Swift, Objective-C, PHP, Ruby, Rails, React, C++, Python, SQL, AWS
                 <% end %>
             </div>
         </div>
