--- a/app/assets/stylesheets/job_applications.scss
+++ b/app/assets/stylesheets/job_applications.scss
@@ -54,3 +54,25 @@ textarea {
     border-width: 2px;
     border-style: inset;
 }
+
+.project-list {
+    .new-application-box {
+        margin-bottom: 5px;
+        .new-application {
+            text-decoration: none;
+            
+            &:visited {
+                color: #2a2f45;
+            }
+        }
+    }
+
+    .project-title {
+        background-color: rgba(255,255,255,.3);
+        padding-left: 5px;
+        margin-bottom: 5px;
+    }
+    .responded {
+        color: green;
+    }
+}
